--- a/test.html
+++ b/test.html
@@ -6,14 +6,18 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Колекции от готови кройки</title>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script>
         $(function(){
-            $("#includedHeader").load("button-rotate.html");
+            $("#includedContent").load("button-rotate.html");
         });
     </script>
 </head>
 <body>
-<div id="includedHeader"></div>
+<div id="includedContent"></div>
+
+
+
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+
 </body>
 </html>
