Updated Portfolio page, Gallery Page

--- a/button-rotate.html
+++ b/button-rotate.html
@@ -12,7 +12,7 @@
 <body>
 
 <div>
-    <a class="btnflip" href="portfolio.html">
+    <a class="btnflip" href="gallery-3col.html">
     <span class="btnflip-item btnflip__front">Повече</span>
     <span class="btnflip-item btnflip__center"></span>
     <span class="btnflip-item btnflip__back">Натисни</span>
