--- a/portfolio-gallery.html
+++ b/portfolio-gallery.html
@@ -28,7 +28,7 @@
         <li class="nav__item"><a href="home.html">Главна страница</a></li>
         <li class="nav__item"><a href="portfolio-gallery.html">Галерия</a></li>
         <li class="nav__item"><a href="#">Таблица с размери</a></li>
-        <li class="nav__item"><a href="#">Контакт</a></li>
+        <li class="nav__item"><a href="#includedContact">Контакт</a></li>
       </ul>
     </nav>
   </div>
@@ -171,8 +171,7 @@
         </div>
       </div>
     </div>
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 <script src="js/portfolio.js"></script>
-
 </body>
 </html>
