--- a/gallery-3col.html
+++ b/gallery-3col.html
@@ -56,7 +56,7 @@
 
                 <ul class="nav">
                     <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="home.html">Главна страница</a>
+                        <a href="home.html" class="dropdown-toggle" data-toggle="dropdown">Главна страница</a>
                     </li>
                     <li><a href="#">Страница 1</a></li>
                     <li class="dropdown">
@@ -319,9 +319,9 @@
                     </div>
                     <div class="span6">
                             <span class="right">
-                            <a href="#">Главна страница</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="#">Страница 1</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a
+                            <a href="home.html">Главна страница</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="#">Страница 1</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a
                                     href="#">Галерия</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="#">Страница 3</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a
-                                    href="#">Контакт</a>
+                                    href="page-contact.html">Контакт</a>
                             </span>
                     </div>
                 </div>
