--- a/gallery-single.html
+++ b/gallery-single.html
@@ -160,9 +160,9 @@
                     </div>
                     <div class="span6">
                             <span class="right">
-                            <a href="#">Главна страница</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="#">Страница 1</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a
+                            <a href="home.html">Главна страница</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="#">Страница 1</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a
                                     href="gallery-3col.html">Галерия</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="#">Страница 3</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a
-                                    href="#">Контакт</a>
+                                    href="page-contact.html">Контакт</a>
                             </span>
                     </div>
                 </div>
