--- a/home.html
+++ b/home.html
@@ -150,7 +150,7 @@
                     <div class="testimonial-content">
                         <img src="img/fabrics.jpg" alt="Image">
                         <h2>Платове</h2>
-                        <a href="#" class="content-link">Повече</a>
+                        <a href="fabrics-gallery.html" class="content-link">Повече</a>
                         <br>
                     </div>
                 </div>
@@ -260,9 +260,9 @@
             <div class="col-sm-12">
                 <div class="footer-content">
                     <h1>Сътрудничество</h1>
-                    <p>“Основна цел на екипа ни е да предостави на своите клиенти висококачествени услуги и ефективни
+                    <p id="footer-area-p">“Основна цел на екипа ни е да предостави на своите клиенти висококачествени услуги и ефективни
                         решения,
-                        <br>с което да подпомогне малките и средни шивашки предприятия в по-ефективно фокусиране върху
+                        <br>с което да подпомогне малки и средни шивашки предприятия в по-ефективно фокусиране върху
                         основните им бизнес процеси..”</p>
                 </div>
             </div>
