--- a/page-contact.html
+++ b/page-contact.html
@@ -103,7 +103,7 @@
             <h2>Напишете ни</h2>
             <p>“Основна цел на екипа ни е да предостави на своите клиенти висококачествени услуги и ефективни
                 решения,
-                <br>с което да подпомогне малките и средни шивашки предприятия в по-ефективно фокусиране върху
+                <br>с което да подпомогне малки и средни шивашки предприятия в по-ефективно фокусиране върху
                 основните им бизнес процеси..”</p>
 
             <form action="#" id="contact-form">
