--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
         <nav class="nav__list">
             <ul>
                 <li class="nav__item"><a href="home.html">Главна страница</a></li>
-                <li class="nav__item"><a href="portfolio-gallery.html">Галерия</a></li>
+                <li class="nav__item"><a href="fabrics-gallery.html">Галерия</a></li>
                 <li class="nav__item"><a href="#">Таблица с размери</a></li>
                 <li class="nav__item"><a href="#">Контакт</a></li>
             </ul>
