--- a/fabrics-gallery.html
+++ b/fabrics-gallery.html
@@ -2,7 +2,7 @@
 <html >
 <head>
   <meta charset="UTF-8">
-  <title>Готови модели</title>
+  <title>Платове и консумативи</title>
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 
@@ -15,7 +15,7 @@
 <body>
 <div class="col-sm-12 text-center">
   <div class="header-content">
-    <h1>Изберете модел</h1>
+    <h1>Платове и консумативи</h1>
   </div>
 </div>
 <div class="nav">
@@ -26,9 +26,9 @@
     <nav class="nav__list">
       <ul>
         <li class="nav__item"><a href="home.html">Главна страница</a></li>
-        <li class="nav__item"><a href="portfolio-gallery.html">Галерия</a></li>
-        <li class="nav__item"><a href="#">Таблица с размери</a></li>
-        <li class="nav__item"><a href="#includedContact">Контакт</a></li>
+        <li class="nav__item"><a href="fabrics-gallery.html">Платове</a></li>
+        <li class="nav__item"><a href="#">Консумативи</a></li>
+        <li class="nav__item"><a href="page-contact.html">Контакт</a></li>
       </ul>
     </nav>
   </div>
@@ -36,34 +36,34 @@
 <div class="container">
   <div class="box">
     <div class="cover left">
-      <h2 class="title">Рокля</h2>
-      <p class="intro">Описание!</p>
+      <h2 class="title">Вълна</h2>
+      <p class="intro">135 см</p>
       <div class="btn"><a href="#">Избери...</a></div>
-      <p class="date">10/2017</p>
+      <p class="date">12 euro</p>
     </div>
   </div>
 <div class="box">
     <div class="cover right">
-      <h2 class="title">Рокля</h2>
-      <p class="intro">Описание!</p>
+      <h2 class="title">Коприна</h2>
+      <p class="intro">132 см</p>
       <div class="btn"><a href="#">Избери...</a></div>
-      <p class="date">12/2016</p>
+      <p class="date">11 euro</p>
     </div>
   </div>
 <div class="box">
     <div class="cover top">
-      <h2 class="title">Рокля</h2>
-      <p class="intro">Описание!</p>
+      <h2 class="title">Лен щампа</h2>
+      <p class="intro">145 см</p>
       <div class="btn"><a href="#">Избери...</a></div>
-      <p class="date">05/2018</p>
+      <p class="date">19 euro</p>
     </div>
   </div>
 <div class="box">
     <div class="cover bottom">
-      <h2 class="title">Рокля</h2>
-      <p class="intro">Описание!</p>
+      <h2 class="title">Лен дюс лилав</h2>
+      <p class="intro">142 см</p>
       <div class="btn"><a href="#">Избери...</a></div>
-      <p class="date">01/2018</p>
+      <p class="date">7 euro</p>
     </div>
   </div>
 
@@ -71,68 +71,68 @@
 <div class="container">
   <div class="box">
     <div class="cover top-left">
-      <h2 class="title">Рокля</h2>
-      <p class="intro">Описание!</p>
+      <h2 class="title">Памучен поплин щампа</h2>
+      <p class="intro">132 см</p>
       <div class="btn"><a href="#">Избери...</a></div>
-      <p class="date">09/2017</p>
+      <p class="date">5 euro</p>
     </div>
   </div>
   <div class="box">
     <div class="cover top-right">
-      <h2 class="title">Рокля</h2>
-      <p class="intro">Описание!</p>
+      <h2 class="title">Лен райе</h2>
+      <p class="intro">143 см</p>
       <div class="btn"><a href="#">Избери...</a></div>
-      <p class="date">02/2018</p>
+      <p class="date">11 euro</p>
     </div>
   </div>
   <div class="box">
     <div class="cover bottom-left">
-      <h2 class="title">Рокля</h2>
-      <p class="intro">Описание!</p>
+      <h2 class="title">Памучно трико</h2>
+      <p class="intro">180 см</p>
       <div class="btn"><a href="#">Избери...</a></div>
-      <p class="date">12/2017</p>
+      <p class="date">8 euro/kg</p>
     </div>
   </div>
   <div class="box">
     <div class="cover bottom-right">
-      <h2 class="title">Рокля</h2>
-      <p class="intro">Описание!</p>
+      <h2 class="title">Вискозно трико</h2>
+      <p class="intro">160 см</p>
       <div class="btn"><a href="#">Избери...</a></div>
-      <p class="date">03/2018</p>
+      <p class="date">8.9 euro/kg</p>
     </div>
   </div>
 </div>
     <div class="container">
       <div class="box">
         <div class="cover left">
-          <h2 class="title">Рокля</h2>
-          <p class="intro">Описание!</p>
+          <h2 class="title">Лен каре</h2>
+          <p class="intro">138 см</p>
           <div class="btn"><a href="#">Избери...</a></div>
-          <p class="date">04/2018</p>
+          <p class="date">7 euro</p>
         </div>
       </div>
       <div class="box">
         <div class="cover right">
-          <h2 class="title">Рокля</h2>
-          <p class="intro">Описание!</p>
+          <h2 class="title">Ацетатна коприна</h2>
+          <p class="intro">150 см</p>
           <div class="btn"><a href="#">Избери...</a></div>
-          <p class="date">10/2017</p>
+          <p class="date">10 euro</p>
         </div>
       </div>
       <div class="box">
         <div class="cover top">
-          <h2 class="title">Рокля</h2>
-          <p class="intro">Описание!</p>
+          <h2 class="title">Памучен габардин</h2>
+          <p class="intro">140 см</p>
           <div class="btn"><a href="#">Избери...</a></div>
-          <p class="date">10/2016</p>
+          <p class="date">12 euro</p>
         </div>
       </div>
       <div class="box">
         <div class="cover bottom">
-          <h2 class="title">Рокля</h2>
-          <p class="intro">Описание!</p>
+          <h2 class="title">Памучен габардин райе</h2>
+          <p class="intro">145 см</p>
           <div class="btn"><a href="#">Избери...</a></div>
-          <p class="date">08/2017</p>
+          <p class="date">12 euro</p>
         </div>
       </div>
 
@@ -140,34 +140,34 @@
     <div class="container">
       <div class="box">
         <div class="cover top-left">
-          <h2 class="title">Рокля</h2>
-          <p class="intro">Описание!</p>
+          <h2 class="title">Ацетатна коприна</h2>
+          <p class="intro">150 см</p>
           <div class="btn"><a href="#">Избери...</a></div>
-          <p class="date">09/2017</p>
+          <p class="date">10 euro</p>
         </div>
       </div>
       <div class="box">
         <div class="cover top-right">
-          <h2 class="title">Рокля</h2>
-          <p class="intro">Описание!</p>
+          <h2 class="title">Памучен габардин</h2>
+          <p class="intro">140 см</p>
           <div class="btn"><a href="#">Избери...</a></div>
-          <p class="date">02/2018</p>
+          <p class="date">12 euro</p>
         </div>
       </div>
       <div class="box">
         <div class="cover bottom-left">
-          <h2 class="title">Рокля</h2>
-          <p class="intro">Описание!</p>
+          <h2 class="title">Памучен поплин</h2>
+          <p class="intro">120 см</p>
           <div class="btn"><a href="#">Избери...</a></div>
-          <p class="date">12/2017</p>
+          <p class="date">4 euro</p>
         </div>
       </div>
       <div class="box">
         <div class="cover bottom-right">
-          <h2 class="title">Рокля</h2>
-          <p class="intro">Описание!</p>
+          <h2 class="title">Сатен</h2>
+          <p class="intro">145 см</p>
           <div class="btn"><a href="#">Избери...</a></div>
-          <p class="date">03/2018</p>
+          <p class="date">7 euro</p>
         </div>
       </div>
     </div>
